<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/dark_gray"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/Lap_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Calculate_button"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="236dp"
        android:gravity="center"
        android:text="@string/Calc_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGoToSecAct"
        android:layout_width="375dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/Hint_act"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edit_Result_Safely"
        tools:text="@string/Hint_act" />

    <EditText
        android:id="@+id/edit_RMin"
        android:layout_width="95dp"
        android:layout_height="51dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="Мин"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_min"
        android:layout_width="106dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="Мин"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/litres_per_lap"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_RHr"
        android:layout_width="95dp"
        android:layout_height="51dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="Час"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_Result_Risky"
        android:layout_width="155dp"
        android:layout_height="51dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="336dp"
        android:cursorVisible="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="Риск. страт."
        android:inputType="number|numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_litres"
        android:layout_width="133dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="Литры"
        android:inputType="number|numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/Race_length"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_sec"
        android:layout_width="106dp"
        android:layout_height="51dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="Сек"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_ms"
        android:layout_width="106dp"
        android:layout_height="51dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="Мс"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_Result_Safely"
        android:layout_width="155dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="336dp"
        android:cursorVisible="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="Безопас. страт."
        android:inputType="number|numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="296dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/Res"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Switch_Heat_Lap"
        android:layout_width="195dp"
        android:layout_height="52dp"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/Heat_Lap"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGoToDataAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Турниры"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToSecAct" />


</androidx.constraintlayout.widget.ConstraintLayout>


